# testing-async-pyo3

./: Cargo.toml  test.py
src/: lib.rs
